Clone and compile